--- a/css/mainstyles.css
+++ b/css/mainstyles.css
@@ -27,7 +27,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.72);
-} 
+}
 .modal-content {
     position: fixed;
     top: 10px;
@@ -41,12 +41,12 @@
     border-style: solid;
     border-width: 3px !important;
     border-color: #827b7b;
-    width: 100%; 
+    width: 100%;
     border-width: 0px
 }
 
 .iframe-media {
-    height: 210px; 
+    height: 210px;
 }
 .close {
     color: #ffffff;
@@ -87,7 +87,7 @@
     overflow: hidden;
     background-color: #e6e6e6;
     border-radius: 7px;
-} 
+}
 .contact_modal_content {
   position: fixed;
     top: 0;
@@ -119,7 +119,7 @@
     padding: 20px;
 }
 .form-title{
-  
+
 
 }
 .form-field{
@@ -134,10 +134,10 @@
     margin: 0px;
     padding: 0px;
     font-size: 13px;
-  
+
 }
 .sub-field-div{
-  
+
 }
 
 /** Carto Style Edits **/
@@ -180,7 +180,7 @@ div.cartodb-timeslider .ui-slider .ui-slider-handle {
     height: 11px !important;
 }
 
-div.cartodb-timeslider a.button{    
+div.cartodb-timeslider a.button{
     background: url(../images/sliderdark.png) no-repeat -2px -55px !important;
 }
 
@@ -209,7 +209,7 @@ div.cartodb-popup.v2 {
     margin-right: 25px;
 }
 
-/** 
+/**
 modal btn stuff **/
 .img-btn-screen-txt-home{
     color: #2d2c2a;
@@ -611,7 +611,7 @@ ul.bxslider {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;   
+  z-index: -1;
 }
 
 .flex-div-1{
@@ -765,7 +765,7 @@ ul.bxslider {
 }
 #content {
     background: rgb(234, 234, 235) !important;
-    
+
 }
 .speaking-pading{
     margin: 0% 5% 0% 0%;
@@ -852,7 +852,7 @@ li:hover {
     background-color: #9a9a9a;
     text-align: center;
 }
-    
+
 .entry-content {
     background-color: none;
 }
@@ -896,7 +896,7 @@ p {
 #myiframe{
     height: 700px;
 }
-.training-text-div { 
+.training-text-div {
     width: 45%;
     margin: 0px;
     display: inline-flex;
@@ -917,7 +917,7 @@ p {
     padding: 6px;
     margin-right: 15%;
     margin-left: 15%;
-    
+
 }
 .top-section {
     padding-top: 0px;
@@ -951,16 +951,16 @@ p {
     border-style: solid;
     border-color: black;
     padding: 20px;
-  
+
 }
 .bio-div{
-    display:block; 
-    margin-top:30px; 
-    height:auto; 
+    display:block;
+    margin-top:30px;
+    height:auto;
     overflow:hidden;
 }
 .bio-imgs {
-    max-height: 225px; 
+    max-height: 225px;
     display: inline-block;
     padding-right: 15%;
 }
@@ -969,13 +969,13 @@ p {
     margin: 0px;
     font-weight: 600;
     font-size: larger;
-    padding: 0%; 
+    padding: 0%;
 }
 .bio-email{
     margin: 0% 0% 2% 0%;
     font-weight: 600;
     font-size: medium;
-    padding: 0%; 
+    padding: 0%;
 }
 .bio-title {
     margin: 0px;
@@ -983,7 +983,7 @@ p {
     font-size: medium;
     padding: 0%;
     color: gray;
-    font-style: italic; 
+    font-style: italic;
 }
 .bio-text {
     font-weight: 300;
@@ -1035,8 +1035,8 @@ a {
 }
 
 .left-nav-ul {
-    margin: 0px; 
-    width: 85%; 
+    margin: 0px;
+    width: 85%;
     background-color: #dde1e6;
 }
 
@@ -1060,8 +1060,8 @@ a {
 .ul-main-page-btns li a {
     color: white;
     display: inline-block;
-    padding: 20px;     
-    margin: -20px; 
+    padding: 20px;
+    margin: -20px;
     font-size: 40px;
     font-weight: 600;
 }
@@ -1176,7 +1176,7 @@ a {
     padding: 0% 0% 0% 0%;
     margin-bottom: 1.5em;
 }
-.bio-sub-title{  
+.bio-sub-title{
     font-size: 40px;
     color: #464646;
     text-align: left;
@@ -1240,7 +1240,7 @@ a {
 }
 .blog-link:hover{
     color: black;
-    
+
 }
 
 .stories-author-line{
@@ -1590,7 +1590,7 @@ textarea[type="text"] {
   transform: scale(1.05);
 }
 /* contact btn */
-.top_btns {    
+.top_btns {
     position: fixed;
     background: url(https://raw.githubusercontent.com/mappingprejudice/mappingprejudice.github.io/master/images/mail_icon.png) no-repeat rgba(17, 17, 17, 0);
     height: 46px;
@@ -1603,9 +1603,9 @@ textarea[type="text"] {
     color:#ffffff;
     cursor: pointer;
 }
-/**-------------------**/  
+/**-------------------**/
 /** RESPONSIVE DESIGN **/
-/**-------------------**/  
+/**-------------------**/
 
 @media screen and (max-width: 2200px){
 
@@ -1670,7 +1670,7 @@ textarea[type="text"] {
     }
     .banner-img-resources {
         background: url(../images/resources_banner_1600.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-events{
         background: url(../images/freeways_1600.png) no-repeat #111;
@@ -1684,7 +1684,7 @@ textarea[type="text"] {
 
      .banner-img {
         background: url(../images/shanty_postcard_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .page-title-padding {
         padding: 100px;
@@ -1694,23 +1694,23 @@ textarea[type="text"] {
     }
      .banner-img-about {
         background: url(../images/group_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-covenants {
         background: url(../images/delphian_heights_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-get-involved {
         background: url(../images/aerial_banner_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-stories {
         background: url(../images/covenants_wall_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-resources {
         background: url(../images/resources_banner_1300.png) no-repeat #111;
-        background-position: center top; 
+        background-position: center top;
     }
     .banner-img-events{
         background: url(../images/freeway_1300.png) no-repeat #111;
@@ -1726,7 +1726,7 @@ textarea[type="text"] {
     .stickyNav {
         display: none;
     }
-  
+
     .sub-title-list-nav-contact {
         display: none;
     }
@@ -1749,7 +1749,7 @@ textarea[type="text"] {
     #myiframe{
         height: 500px;
     }
-   
+
     .active-nav-link {
         color: #f3f3f3;
         font-size: larger;
@@ -1759,7 +1759,7 @@ textarea[type="text"] {
         font-weight: normal;
         display: inline-block;
         padding: 0px;
-        width: inherit;     
+        width: inherit;
     }
     .active-nav-link:hover{
         color: #ffffff;
@@ -1769,7 +1769,7 @@ textarea[type="text"] {
     }
     .hvr-underline-from-left:before {
         background: rgba(0, 0, 0, 0);
-    }   
+    }
     .sub-title-list {
         margin: 10px;
     }
@@ -1885,7 +1885,7 @@ textarea[type="text"] {
         margin: 5%;
         text-align: center;
     }
- 
+
     #mc_embed_signup {
         text-align: left;
     }
@@ -2075,7 +2075,7 @@ textarea[type="text"] {
     #sub-title-link-donate{
         color: white;
         font-weight: 500;
-    }         
+    }
     #sub-title-link{
         color: white;
         font-weight: 500;
@@ -2136,7 +2136,7 @@ textarea[type="text"] {
     }
     .main-page-btns{
         margin-left: 0px;
-        margin-right: 0px; 
+        margin-right: 0px;
     }
 
     .press-imgs {
@@ -2174,7 +2174,7 @@ textarea[type="text"] {
     }
     #kevBtn {
         margin-left: -27px;
-        
+
     }
     .iframe-background {
         margin-right: 7%;
@@ -2184,7 +2184,7 @@ textarea[type="text"] {
 
     .iframe-media {
         width: 300px;
-        height: 200px; 
+        height: 200px;
     }
     p {
         padding-right: 7%;
@@ -2207,5 +2207,9 @@ textarea[type="text"] {
     .social-ul {
         display: -webkit-inline-box;
         text-align: center;
-    }   
+    }
+}
+
+#map-container {
+    margin: 5%
 }
